[project]
name = "pyreydenx"
description = "Reyden-X is an automated service for promoting live broadcasts on external sites with integrated system of viewers and views management."
version = "1.0.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["reydenx", "twitch", "trovo", "youtube", "vkplay", "goodgame"]
maintainers = [
    { name = "Ruslan Semagin", email = "pixel.365.24@gmail.com" }
]
install_requires = [
    "requests",
    "pydantic<3.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only"
]

[project.urls]
homepage = "github.com/pixel365/pyreydenx"
repository = "github.com"

[build-system]
requires = ["setuptools", "wheel"]
